# persona-council

./: .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  SPEC_TRACKER.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: design-sync.yml
claude-skills/autonomous-research-run/: SKILL.md
claude-skills/compose-research-plan/: SKILL.md
claude-skills/design-thinking/: SKILL.md
claude-skills/design-thinking-deep/: SKILL.md
claude-skills/methodology-run/: SKILL.md
claude-skills/run-council/: SKILL.md
claude-skills/simulate-cohort/: SKILL.md
claude-skills/synthesize/: SKILL.md
data/showcase/: DELIVER_solution_presentation.md  plan.md
docs/: README.md  calibration.md  embeddings.md  flow-walkthrough.md  frameworks.md  grounding.md  i18n.md  job-framework-format.md  keyboard-conventions.md  lifecycle-hooks.md  live-walkthrough-safety.md  opt-in-aggregation-design.md  pagination.md  project-assets.md  selective-live-actuation.md  substrate.md  web-mutations.md
packaging/sonaloop-mcp/: README.md  pyproject.toml
packaging/sonaloop-mcp/sonaloop_mcp/: __init__.py
persona_council/: __init__.py  artifacts.py  avatar.py  browser.py  cli.py  config.py  evaluation.py  llm_simulation.py  mcp_server.py  methodology.py  models.py  plan.py  presentation.py  prototypes.py  runtime.py  services.py  storage.py  suggestions.py  web.py  web_assets.py
persona_council/llm_simulation/: __init__.py  _schemas.py  _validators.py
persona_council/mcp_server/: __init__.py  _catalogue.py  _env.py  _tools_council.py  _tools_eval.py  _tools_methodology.py  _tools_personas.py  _tools_plan.py  _tools_prototypes.py  _tools_research.py  _tools_sections.py  _tools_simulation.py
persona_council/methodologies/: double_diamond.json  double_diamond_deep.json  dschool_micro.json  lean_jtbd.json
persona_council/services/: __init__.py  _authoring.py  _common.py  _consolidation.py  _councils.py  _engines.py  _evaluation.py  _memory.py  _personas.py  _research.py  _sections.py  _simulation.py  _snapshots.py  _synthesis.py
persona_council/storage/: __init__.py  _base.py  _memory.py  _research.py  _schema.py  _simulation.py
persona_council/suggestions/: artifact_types.json  evidence_kinds.json  finding_kinds.json  section_kinds.json
persona_council/web/: __init__.py  _components.py  _detail.py  _graph.py  _html.py  _i18n.py  _palette.py  _rail.py  _render.py  _routes_api.py  _routes_lists.py  _routes_pages.py  _synthesis.py
prototypes/atmender-schutz/: concept.json  index.html
prototypes/br-survey/: concept.json  index.html
prototypes/disqualifier-flow/: concept.json  index.html
prototypes/ehrlicher-check/: concept.json  index.html
prototypes/ehrlicher-lotse/: concept.json  index.html
prototypes/ehrlicher-vorsorge-check/: concept.json  index.html
prototypes/ehrlicher-vorsorge-check-v02/: index.html
prototypes/ehrlicher-vorsorge-check-v03/: index.html
prototypes/esv-sechs-monate/: concept.json  index.html
prototypes/esv-voller-stuhl-lofi/: concept.json  index.html
prototypes/esv-voller-stuhl-midfi/: concept.json  index.html
prototypes/fenster-fuersprecher-journey/: concept.json  index.html
prototypes/s1/: concept.json  (+1 more)
scripts/: migrate_to_primitives.py  seed_demo.py  seed_notgroschen_demo.py  sync_icons.sh  ux_shots.py  ux_spacing.py  ux_type.py
sonaloop/: __init__.py  _charts.py  _cli_catalog.py  _cli_data.py  _cli_feedback.py  _cli_hooks.py  _cli_substrate.py  _components_css.py  _deck.py  _deck_assets.py  _diagnostics.py  _icons.py  _pixel_font.py  _pptx.py  _pptx_charts.py  _pptx_preview.py  _shell.py  _tokens.py  artifacts.py  assets.py  avatar.py  browser.py  capture.py  charts_catalogue.py  cli.py  config.py  doc_schemas.py  embeddings.py  job_presets.py  job_taxonomy.py  memory.py  methodology.py  models.py  plan.py  plan_assess.py  plan_iterate.py  plan_render.py  presentation.py  prototypes.py  suggestions.py  (+5 more)
spec/: MASTER-TRACKER.md  artifact-cross-references.md  component-ssr-architecture.md  deep-design-thinking-and-diamond.md  design-system.md  design-thinking-methodology.md  exhaustive-self-verifying-runs.md  exploration-depth-and-prototype-variety.md  harness-evaluation-and-autonomy.md  harness-leverage-roadmap.md  harness-run-observations.md  hx3-engine-collapse.md  innovation-recipe.md  linear-design-system.md  linear-gap.md  markdown-authoring-harness.md  mcp-surface-cleanup.md  mcp-tool-contract.md  memory-and-simulation-architecture.md  meta-report-presentation-and-pdf.md  methodology-and-clarity-redesign.md  methodology-constellations.md  methodology-engine-and-prototyping.md  methodology-presentation-from-data.md  planning-and-evidence-architecture.md  refactor-plan.md  research-graph-and-meta-report.md  research-plan-engine.md  roadmap.md  sections-and-composable-graph.md  showcase-review.md  simulation-loop-contract.md  unified-artifact-schema-rollout.md  unified-artifact-schema.md  unified-synthesis-report.md  ux-audit.md  ux-contract.md  ux-structural-review.md
tests/: conftest.py  test_actuation.py  test_adapters.py  test_artifacts_primitives.py  test_autonomy.py  test_browser_harness.py  test_calibration.py  test_capabilities.py  test_catalog_tools.py  test_charts.py  test_cohort_quality.py  test_council_artifacts.py  test_council_vote_stance.py  test_coverage.py  test_decisions.py  test_deck_template.py  test_embeddings_providers.py  test_events.py  test_examples.py  test_feedback.py  test_first_run.py  test_flow_walkthrough.py  test_gather_author_writeback.py  test_grounding.py  test_head_to_head.py  test_hooks.py  test_html_builder.py  test_hypotheses.py  test_i18n.py  test_i18n_leaks.py  test_ideation.py  test_job_presets.py  test_job_taxonomy.py  test_live_walkthrough.py  test_loc_budget.py  test_mcp_annotations.py  test_mcp_contract.py  test_mcp_output_budget.py  test_mcp_tool_extensions.py  test_methodology_engine.py  (+45 more)
tmp_sonaloop_ai_architecture/: 01_katharina_mertens.json  02_lukas_reuter.json  03_anna_seidel.json  04_markus_vogel.json  05_tobias_falk.json
(+261 files in other folders)
