[project]
name = "sonaloop"
version = "0.1.0"
description = "Terminal-first MCP customer persona simulation and council system."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "mcp>=1.2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "sonaloop-icons",
    # Headless-browser harness — REQUIRED, not optional: prototype screenshots + the meta-report PDF
    # export depend on it. The chromium binary itself is fetched by `make install` (`playwright install
    # chromium`), which a pip/uv dependency can't do.
    "playwright>=1.40.0",
]

# Shared icon library — single source of truth lives in ../sonaloop-icons
# (mirrors how bim-website consumes ../bim-icons). The React website imports the
# TSX build; the council imports the generated Python module under py/.
[tool.uv.sources]
sonaloop-icons = { path = "../sonaloop-icons/py", editable = true }

[project.scripts]
sonaloop = "sonaloop.cli:main"
sonaloop-mcp = "sonaloop.mcp_server:main"
sonaloop-web = "sonaloop.web:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sonaloop"]
