[project]
name = "sonaloop-mcp"
version = "0.1.1"
description = "uvx-launchable shim for the Sonaloop MCP server — `uvx sonaloop-mcp` just works."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Johannes Hötter", email = "jt.hoetter@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "sonaloop"]
dependencies = ["sonaloop>=0.1.1"]

[project.urls]
Homepage = "https://github.com/jhoetter/sonaloop"
Documentation = "https://jhoetter.github.io/sonaloop-docs/"

[project.scripts]
sonaloop-mcp = "sonaloop_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sonaloop_mcp"]
